fixed file overflow-y issue

--- a/public/css/files.css
+++ b/public/css/files.css
@@ -28,3 +28,8 @@
     margin-right: 3em;
     margin-top: 20px;
 }
+
+#fileList {
+    height: 60vh;
+    overflow-y: auto;
+}
